src/test/resources/semantic/error/TS_ERROR_IMPL_SIN_STRUCT.ru
/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 5 | COLUMNA 6 | Struct A debe definirse. Falta struct. |

impl A{
    st fn m1()->void{

    }
}

start{

}